--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- As a heading -->
-<nav class="navbar navbar-dark bg-primary">
+<nav class="navbar navbar-dark bg-dark">
 <div class="container-fluid">
   <span class="navbar-brand mb-0 h1">{{ title }}</span>
 </div>
