--- a/src/app/tabela-price/tabela-price.component.html
+++ b/src/app/tabela-price/tabela-price.component.html
@@ -7,6 +7,7 @@
         class="form-control"
         [(ngModel)]="c"
         placeholder="100"
+        step="0.01"
       />
       <label class="form-label">Juros (%)</label>
       <input
@@ -14,6 +15,7 @@
         class="form-control"
         [(ngModel)]="i"
         placeholder="0.01"
+        step="0.01"
       />
       <label class="form-label">Tempo (meses)</label>
       <input
